--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,13 @@
     <!-- Poppins Googe Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <title>Clínica Conscius</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -20,18 +24,37 @@
         </div>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Quem somos</li>
-                <li>Áreas de atuação</li>
-                <li>Diferenciais</li>
-                <li>Contato</li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#quem-somos">Quem somos</a></li>
+                <li><a href="#areas-de-atuacao">Áreas de atuação</a></li>
+                <li><a href="#diferenciais">Diferenciais</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
-        <div class="mobile-menu-icon hidden">
+        <div class="mobile-menu-icon">
             &#9776;
-        </div>     
-        <div class="mobile-menu hidden">
+        </div>
+        <div class="mobile-menu">
         </div>
     </header>
+
+    <section id="home">
+        <div class="home-main-container">
+            <div class="home-img"></div>
+            <div class="home-content">
+                <h1>Clínica Conscius</h1>
+                <p>
+                    Atendimento psicológico de qualidade. Onde você sentirá acolhimento e segurança
+                </p>
+                <ul>
+                    <li>Seiri Y. Hamashida</li>
+                    <li>Paulo W. Havelino</li>
+                    <li>Genilda T. Severiano</li>
+                    <li>Álvaro K. Silvanês</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
