Starting to implement About us section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#quem-somos">Quem somos</a></li>
+                <li><a href="#about-us">Quem somos</a></li>
                 <li><a href="#areas-de-atuacao">Áreas de atuação</a></li>
                 <li><a href="#diferenciais">Diferenciais</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -39,7 +39,7 @@
     </header>
 
     <section id="home">
-        <div class="home-main-container">
+        <div class="section-main-container">
             <div class="home-img"></div>
             <div class="home-content">
                 <h1>Clínica Conscius</h1>
@@ -53,6 +53,21 @@
                     <li>Álvaro K. Silvanês</li>
                 </ul>
             </div>
+        </div>
+    </section>
+
+    <section id="about-us">
+        <div class="section-main-container">
+            <h1>Quem somos</h1>
+            <div class="about-us-img"></div>
+            <p>
+                Somos a <strong>Clínica Conscius</strong>, um lugar onde você encontrará um ambiente em que sentirá
+                segurança, acolhimento e a certeza de confidencialidade
+            </p>
+            <p>
+                Com profissionais experientes e com visão humanizada, você encontrará alívio e a saída para depressão,
+                pânico, compulsões e diversas outras questões emocionais.
+            </p>
         </div>
     </section>
 </body>
