Finishing About us section

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
     <section id="about-us">
         <div class="section-main-container">
-            <h1>Quem somos</h1>
+            <h1 id="about-us-title">Quem somos</h1>
             <div class="about-us-img"></div>
-            <p>
+            <p id="about-us-p1">
                 Somos a <strong>Clínica Conscius</strong>, um lugar onde você encontrará um ambiente em que sentirá
                 segurança, acolhimento e a certeza de confidencialidade
             </p>
-            <p>
+            <p id="about-us-p2">
                 Com profissionais experientes e com visão humanizada, você encontrará alívio e a saída para depressão,
                 pânico, compulsões e diversas outras questões emocionais.
             </p>
