Starting Skills section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             </p>
         </div>
     </section>
+
+    <section id="skills">
+        <div class="section-main-container">
+            
+        </div>
+    </section>
+
 </body>
 
 </html>
