Defining grid of Skills section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,20 @@
 
     <section id="skills">
         <div class="section-main-container">
-            
+            <h1>Áreas de atuação</h1>
+            <div id="skills-img-01"></div>
+            <div id="skills-img-02"></div>
+            <div id="skills-img-03"></div>
+            <div id="skills-img-04"></div>
+            <ul class="skills-list">
+                <li>Atendimento a crianças, jovens e idosos</li>
+                <li>Depressão</li>
+                <li>Pessoas no espectro autista</li>
+                <li>Psicopedagogia</li>
+                <li>Obssessões</li>
+                <li>Compulsões</li>
+                <li>Pânico, etc.</li>
+            </ul>
         </div>
     </section>
 
