Finishing Skills section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about-us">Quem somos</a></li>
-                <li><a href="#areas-de-atuacao">Áreas de atuação</a></li>
+                <li><a href="#skills">Áreas de atuação</a></li>
                 <li><a href="#diferenciais">Diferenciais</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
