Implementing key-differentiators section

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about-us">Quem somos</a></li>
                 <li><a href="#skills">Áreas de atuação</a></li>
-                <li><a href="#diferenciais">Diferenciais</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="#key-differentiators">Diferenciais</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
         <div class="mobile-menu-icon">
@@ -87,6 +87,23 @@
                 <li>Compulsões</li>
                 <li>Pânico, etc.</li>
             </ul>
+        </div>
+    </section>
+
+    <section id="key-differentiators">
+        <div class="section-main-container">
+            <h1>Diferenciais</h1>
+            <div class="key-differentiators-content">
+                <div class="key-differentiator">
+                    Atendimento acolhedor com foco na pessoa
+                </div>
+                <div class="key-differentiator">
+                    Terapia comportamental, terapia humanista, terapia cognitivo comportamental
+                </div>
+                <div class="key-differentiator">
+                    Estímulo ao autocuidado e ao processo de desenvolvimento humanizado
+                </div>
+            </div>
         </div>
     </section>
 
