Defining Contact section (small screens)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+    <!-- Playpen Suns Google Font -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+
     <title>Clínica Conscius</title>
 </head>
 
@@ -102,6 +107,34 @@
                 </div>
                 <div class="key-differentiator">
                     Estímulo ao autocuidado e ao processo de desenvolvimento humanizado
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="section-main-container">
+            <h1>Contato</h1>
+            <div class="contact-container">
+                <div class="contact-content">
+                    <div class="contact-text">
+                        Agende uma consulta presencial ou onine
+                    </div>
+                    <contact class="brands-logos">
+                        <img src="assets/img/whatsapp.svg" alt="Clínica Conscius WhatsApp">
+                    </contact>
+                </div>
+            </div>
+            <div class="contact-container">
+                <div class="contact-content">
+                    <div class="contact-text">
+                        Siga-nos nas redes sociais
+                    </div>
+                    <contact class="brands-logos">
+                        <img src="assets/img/instagram.svg" alt="Clínica Conscius Instagram">
+                        <img src="assets/img/facebook.svg" alt="Clínica Conscius Facebook">
+                        <img src="assets/img/x-twitter.svg" alt="Clínica Conscius X-Twitter">
+                    </contact>
                 </div>
             </div>
         </div>
