Implementing mobile menu

--- a/index.html
+++ b/index.html
@@ -36,10 +36,19 @@
                 <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
-        <div class="mobile-menu-icon">
-            &#9776;
-        </div>
         <div class="mobile-menu">
+            <div class="mobile-menu-icon">
+                &#9776;
+            </div>
+            <div class="mobile-menu-content">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about-us">Quem somos</a></li>
+                    <li><a href="#skills">Áreas de atuação</a></li>
+                    <li><a href="#key-differentiators">Diferenciais</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
